app/assets/stylesheets/home.scss
.slideer{
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  border-bottom: 1px solid black;
  //@media (max-width: 768px) {
  //  height: 75vh;
  //}
}
.services{
  &-container{
    display: flex;
    background-color: #fff;
    box-shadow: 0 0 35px 5px #dceff8;
    width: 100%;
    margin: auto;
    justify-content: space-between;
    max-width: 1440px;
    transform: translateY(-20%);
    flex-direction: column;
    @media only screen and (min-width: 600px) {
      width: 60%;
    }
    @media only screen and (min-width: 800px) {
      transform: translateY(-40%);
      flex-direction: row;
      width: 100%;
    }
    @media only screen and (min-width: 1100px) {
      width: 85%;
    }


  }
  &-image-icons{
    height: 70px;
    width: 70px;
    object-fit: contain;
  }
  &-item{
    display: flex;
    margin: 45px 20px 60px;
    align-items: center;
    border-right: 1px dashed #cccccc;
    @media only screen and (max-width: 800px) {
      border-bottom:1px dashed #cccccc;
      border-right: none;

    }
    &:last-child{
      border-right: none;
      border-bottom: none;
    }
  }
  &-icon{
    flex: 0 0 35%;
    margin-bottom: 15px;
  }
  &-detail{
    flex: 0 0 65%;
    padding: 10px 50px 10px 0px;
    //border-right: 1px dashed #cccccc;
    @media only screen and (max-width: 800px) {
     border-right: none;
    }
  }
  &-detail-border-none{
    border-right: none;
  }
  &-heading{
    color: #181c1b;
    font-family: 'Roboto',sans-serif;
    font-size: 24px;
    line-height: 43px;
    font-style: normal;
    font-weight: 400;
    letter-spacing: 0px;
    text-transform: none;
    //direction: rtl;
  }
  &-text{
    color: #828282;
    font-family: 'Roboto',sans-serif;
    font-size: 14px;
    line-height: 26px;
    font-style: normal;
    font-weight: 400;
    //direction: rtl;
  }
}
//cards
.cards-row{
  display: flex;
  align-items: stretch;
  flex-wrap: wrap;
  @media only screen and (min-width: 1100px) {
   flex-wrap: nowrap;
  }
}
.services-section,
.cards-section{
  background-color: #FAFAFA;
}
.cards-section{
  padding-bottom: 50px;
}
.cards-container{
  width: 100%;
  margin: auto;
  max-width: 1440px;
  justify-content: center;
  @media only screen and (min-width: 1100px) {
    width: 85%;
  }
}
.health{
  &-cards{
    //height: 450px;
    //width: 33%;
    flex: 1;
    min-width: 300px;
    overflow: hidden;
    margin: 5px 10px;
    display: flex;
    flex-direction: column;
    padding-bottom: 20px;
    &-header{
      flex: 0 0 40%;
      overflow: hidden;
      height: 230px;
    }
  }
  &-card-img{
    height: 100%;
    width: 100%;
    object-fit: cover;
  }
  &-card-heading{
    color: #181c1b;
    font-family: 'Roboto',sans-serif;
    font-size: 24px;
    line-height: 43px;
    font-style: normal;
    font-weight: 400;
    letter-spacing: 0px;
    text-transform: none;
    //text-align: right;
    margin: 15px 0;
  }
  &-blue-card{
    background-color: #00a0f0;
    padding: 30px;
    color: #fff;
    flex: 1;
    @media only screen and (min-width: 1100px) {
      flex: auto;
    }
  }
  &-card-text-row{
    display: flex;
    text-transform: uppercase;
    justify-content: space-between;
    color: #fff;
    margin: 11px 0;
  }
  &-card-time-slot,
  &-card-day-name{
    font-size: 16px;
    font-weight: 500;
    letter-spacing: 0.4px;
  }
  &-card-dot-name{
    flex: 1;
    border-bottom: 1px dotted #fff;
    margin-bottom: 7px;
  }
  &-card-heading-white{
    font-family: 'Roboto',sans-serif;
    font-size: 36px;
    line-height: 43px;
    font-style: normal;
    font-weight: 300;
    letter-spacing: 0px;
    text-transform: none;
    text-align: center;
  }
  &-card-text-white-sm{
    color: #b0d8f8;
    text-align: center;
  }
}
.quality{
  &-background-container{
    background-image: image_url("Slider3/1.jpg");
    //height: 100vh;
    background-position: top;
    display: flex;
    background-size: cover;
    background-position-x: left;

  }
  &-photo-container{
    height: 90px;
    width: 90px;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    border: 2px solid #cecece;
    border-radius: 100px;
    & img{
      height: 45px;
      width: 45px;
    }
  }
  &-left-side{
    flex: 0 0 65%;
    background-color: rgba(255,255,255,.7);
    @media only screen and (max-width:786px)  {
      flex: 0 0 100%;
    }
  }
  &-right-side{
    background-color: rgba(255,255,255,.7);
    flex: 1;
  }
  &-left-side{
    padding: 50px 100px;
    @media only screen and (max-width:786px)  {
      padding: 50px 10px;
    }
  }
  &-item{
    display: flex;
    margin-bottom: 14px;
    align-items: center;
    //flex-direction: row-reverse;
    &-left{
      flex: 0 0 25%;
      text-align: center;
    }
    &-heading{
      color: #181c1b;
      font-family: 'Roboto',sans-serif;
      font-size: 20px;
      line-height: 72px;
      font-style: normal;
      font-weight: 400;
      letter-spacing: 0px;
      text-transform: none;
      //text-align: right;
    }
  }
}
/* ... */

